--- a/Estilos_alternos.css
+++ b/Estilos_alternos.css
@@ -1,7 +1,7 @@
 body
 {
-    background-image: url("Imagenes/Fondo1.jpg");
-    background-repeat: no-repeat;
+    background: black;
+
 }
 
 .contenedor-padre
